# bo-tie

./: .gitignore  .rustfmt.toml  Cargo.toml  LICENSE
base-crates/bo-tie-linux/: Cargo.toml  LICENSE
base-crates/bo-tie-linux/ci/gen-bindings/: Dockerfile  run.sh
base-crates/bo-tie-linux/src/: bluez.rs  device.rs  event.rs  lib.rs  timeout.rs
base-crates/bo-tie-linux/src/device/: bindings.rs  bindings_errata.rs  legacy.rs  mgmt.rs  mod.rs
bo-tie/: Cargo.toml
bo-tie-hci/bo-tie-hci-util/: Cargo.toml
bo-tie-hci/bo-tie-hci-util/src/: de_vec.rs  le.rs  lib.rs  opcodes.rs
bo-tie-hci/bo-tie-hci-util/src/channel/: async_std.rs  futures_rs.rs  mod.rs  tokio.rs
bo-tie-hci/bo-tie-hci-util/src/events/: mod.rs  parameters.rs
bo-tie-hci/bo-tie-hci-util/src/local_channel/: mod.rs
bo-tie-host/bo-tie-att/: Cargo.toml
bo-tie-host/bo-tie-att/src/: client.rs  lib.rs
bo-tie-host/bo-tie-att/src/server/: mod.rs
bo-tie-host/bo-tie-gap/: Cargo.toml
bo-tie-host/bo-tie-gap/src/: eir.rs  lib.rs  oob_block.rs
bo-tie-host/bo-tie-gap/src/assigned/: le_device_address.rs  le_role.rs  local_name.rs  mod.rs  service_data.rs
bo-tie-host/bo-tie-gatt/: Cargo.toml
bo-tie-host/bo-tie-gatt/src/: characteristic.rs  lib.rs
bo-tie-host/bo-tie-sm/: Cargo.toml
bo-tie-host/bo-tie-sm/src/: encrypt_info.rs  initiator.rs  lib.rs  oob.rs  responder.rs  toolbox.rs
bo-tie-macros/: Cargo.toml
bo-tie-macros/src/: display_enum.rs  display_event.rs  lib.rs
bo-tie-macros/src/depth_count/: depth_counter.rs  mod.rs
bo-tie-macros/src/hi/: args.rs  flow_control.rs  mod.rs
bo-tie-serde/: Cargo.toml
bo-tie-serde/src/: error.rs  lib.rs  varnum.rs
bo-tie-serde/src/de/: mod.rs
bo-tie-serde/src/ser/: mod.rs
bo-tie-util/: Cargo.toml
bo-tie-util/src/: buffer.rs  cryptography.rs  errors.rs  lib.rs
bo-tie-util/src/buffer/: de_vec.rs  mod.rs  stack.rs
bo-tie/src/: host.rs  lib.rs
bo-tie/src/att/: client.rs  mod.rs  pdu.rs
bo-tie/src/att/server/: mod.rs
bo-tie/src/gap/: mod.rs  oob_block.rs  scan.rs
bo-tie/src/gap/assigned/: flags.rs  le_device_address.rs  le_role.rs  local_name.rs  mod.rs  sc_confirm_value.rs  sc_random_value.rs  service_data.rs  service_uuids.rs
bo-tie/src/gatt/: characteristic.rs  mod.rs
bo-tie/src/hci/: cb.rs  commands.rs  common.rs  error.rs  events.rs  info_params.rs  link_control.rs  mod.rs  opcodes.rs  status_prams.rs  testing.rs
bo-tie/src/hci/commands/: le.rs  mod.rs
bo-tie/src/hci/common/: le.rs  mod.rs
bo-tie/src/hci/flow_ctrl/: flow_manager.rs  mod.rs
bo-tie/src/hci/interface/: flow_control.rs  mod.rs  uart.rs
bo-tie/src/hci/le/: common.rs  con_pram_req.rs  connection.rs  encryption.rs  mandatory.rs  mod.rs  privacy.rs  receiver.rs  transmitter.rs
bo-tie/src/hci_transport/: mod.rs
bo-tie/src/l2cap/: mod.rs  send_future.rs  signals.rs
bo-tie/src/sm/: initiator.rs  mod.rs  responder.rs  toolbox.rs
examples/advertiser/: Cargo.toml  README.md
examples/advertiser/src/: main.rs
examples/bonding-peripheral/: Cargo.toml  README.md
examples/bonding-peripheral/src/: io.rs  main.rs
examples/heart-rate-profile/: Cargo.toml
examples/heart-rate-profile/src/: connection.rs  io.rs  main.rs  security.rs  server.rs
examples/heart-rate-profile/src/advertise/: mod.rs
examples/heart-rate-profile/src/io/: commands.rs  mod.rs  tab.rs
examples/le-bonding-peripheral/: Cargo.toml
examples/le-bonding-peripheral/src/: io.rs  main.rs
examples/le-bonding-peripheral/src/privacy/: controller_privacy.rs  host_privacy.rs  mod.rs
examples/le-central/: Cargo.toml  README.md
examples/le-central/src/: io.rs  main.rs
examples/le-peripheral/: Cargo.toml  README.md
examples/le-peripheral/src/: main.rs
hci/bo-tie-hci-host/: Cargo.toml
hci/bo-tie-hci-host/src/: l2cap.rs  lib.rs
hci/bo-tie-hci-host/src/commands/: cb.rs  info_params.rs  link_control.rs  mod.rs  status_prams.rs
hci/bo-tie-hci-host/src/l2cap/: mod.rs  recv_future.rs  send_future.rs
hci/bo-tie-hci-interface/: Cargo.toml
hci/bo-tie-hci-interface/src/: buffer.rs  flow_control.rs  lib.rs  uart.rs
hci/bo-tie-hci-util/: Cargo.toml
hci/bo-tie-hci-util/src/: impl_trait_ext.rs  le.rs  lib.rs  opcodes.rs  trait_ext.rs
hci/bo-tie-hci-util/src/channel/: async_std.rs  futures_rs.rs  mod.rs  send_safe.rs  tokio.rs
hci/bo-tie-hci-util/src/events/: mod.rs  parameters.rs
hci/bo-tie-hci-util/src/local_channel/: mod.rs
host/bo-tie-att/: Cargo.toml  README.md
host/bo-tie-att/src/: client.rs  lib.rs  pdu.rs
host/bo-tie-att/src/client/: mod.rs  response_processor.rs
host/bo-tie-att/src/server/: access_value.rs  mod.rs
host/bo-tie-gap/: Cargo.toml  README.md
host/bo-tie-gap/src/: lib.rs  oob_block.rs  scan.rs  security.rs  time_consts.rs
host/bo-tie-gap/src/assigned/: flags.rs  le_device_address.rs  le_role.rs  mod.rs  sc_confirm_value.rs  sc_random_value.rs  security_manager_tk_value.rs  service_data.rs  service_uuids.rs
host/bo-tie-gatt/: Cargo.toml  README.md
host/bo-tie-gatt/src/: characteristic.rs  lib.rs
host/bo-tie-gatt/src/characteristic/: aggregate_format.rs  client_config.rs  declaration.rs  extended_properties.rs  format.rs  gap.rs  gatt.rs  mod.rs  presentation_format.rs  server_config.rs  user_description.rs  value.rs
host/bo-tie-gatt/src/uuid/: gap.rs  gatt.rs  mod.rs
host/bo-tie-l2cap/: Cargo.toml
host/bo-tie-l2cap/src/: channels.rs  lib.rs  link_flavor.rs  logical_link_private.rs  send_future.rs  signals.rs
host/bo-tie-l2cap/src/channel/: collection.rs  credit_based.rs  id.rs  mod.rs  signalling.rs  unused.rs
host/bo-tie-l2cap/src/connection_channel/: credit_based.rs  mod.rs  signalling.rs
host/bo-tie-l2cap/src/pdu/: basic_frame.rs  control_frame.rs  credit_frame.rs  mod.rs  send_future.rs
host/bo-tie-l2cap/src/signals/: mod.rs  packets.rs  processor.rs
host/bo-tie-sm/: Cargo.toml
host/bo-tie-sm/src/: encrypt_info.rs  initiator.rs  io.rs  lib.rs  oob.rs  pairing.rs  responder.rs  toolbox.rs
host/tests/: Cargo.toml
host/tests/src/: lib.rs
host/tests/src/physical_link/: mod.rs
host/tests/tests/att/: att_find_by_type_value.rs  lib.rs  (+14 more)
(+198 files in other folders)
