[workspace]
default-members = [
    "bo-tie",
    "bo-tie-host/*",
    "bo-tie-hci/*",
    "bo-tie-macros",
    "bo-tie-util",
]

members = [
    "bo-tie",
    "bo-tie-hci/*",
    "bo-tie-host/*",
    "bo-tie-macros",
    "bo-tie-serde",
    "bo-tie-util",
    "base-crates/*",
    "examples/*",
]