[workspace]
default-members = [
    "bo-tie",
    "host/*",
    "hci/*",
    "bo-tie-macros",
    "bo-tie-core",
]

members = [
    "bo-tie",
    "hci/*",
    "host/*",
    "bo-tie-macros",
    "bo-tie-serde",
    "bo-tie-core",
    "base-crates/*",
    "examples/*",
]

resolver = "2"
