[workspace]
default-members = [
    "bo-tie",
    "host/bo-tie-att",
    "host/bo-tie-gap",
    "host/bo-tie-gatt",
    "host/bo-tie-host-util",
    "host/bo-tie-l2cap",
    "host/bo-tie-sm",
    "hci/bo-tie-hci-host",
    "hci/bo-tie-hci-interface",
    "hci/bo-tie-hci-util",
    "bo-tie-macros",
    "bo-tie-core",
]

members = [
    "bo-tie",
    "hci/*",
    "host/*",
    "bo-tie-macros",
    # "bo-tie-serde",
    "bo-tie-core",
    "base-crates/*",
    "base-crates/bo-tie-linux/ci/gen-bindings",
    "examples/*",
]

resolver = "2"
