[package]
name = "bo-tie-macros"
version = "0.1.0"
authors = ["gpace1 <33923139+gpace1@users.noreply.github.com>"]
edition = "2018"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quote = "1.0"
syn = "1.0"
proc-macro2 = "1.0.21"
