[package]
name = "bo-tie-serde"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["alloc"]
alloc = ["serde/alloc"]
std = ["serde/std"]
rc = ["serde/rc"]

[dependencies]
serde = { version="1.0", default-features = false }
thiserror = "1.0"