[package]
name = "bo-tie-util"
version = "0.1.0"
edition = "2021"

[dependencies]
aes = { version = "0.8", optional = true }
elliptic-curve = { version = "0.12", default-features = false, features = ["ecdh"], optional = true }
p256 = { version = "0.11", default-features = false, features = ["ecdh"], optional = true }
rand_core = { version = "0.6", default-features = false }
serde = { version = "1", features = ["derive"], optional = true }

[features]
default = ["alloc"]
alloc = []
std = ["elliptic-curve/std", "p256/std", "rand_core/std"]
serde = ["dep:serde"]
sys-rand = ["rand_core/getrandom"]
cryptography = ["aes", "elliptic-curve", "p256"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]