[package]
name = "bo-tie"
version = "0.1.0"
authors = ["gpace1 <33923139+gpace1@users.noreply.github.com>"]
keywords = ["Bluetooth", "BLE", "Low Energy"]
categories = ["asynchronous"]
license = "MIT"
edition = "2018"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
bo-tie-macros = { path = "../bo-tie-macros" }
# bo-tie-serde = { path = "../bo-tie-serde" }
serde = { version = "1", features = ['derive'] }
log = "0.4"
rand_core = { version = "0.6", features = ['getrandom'] }
elliptic-curve = { version = "0.10", features = ["ecdh"] }
p256 = { version = "0.9", features = ["ecdh"] }
aes = { version = "0.7" }
uuid = { version = "0.8", optional = true }
lazy_static = "1.4"

[features]
default = ["v5_0"]
unstable = []
v4_2 = [] # bluetooth v4.2
v5_0 = [] # bluetooth v5.0
uuid-crate = ["uuid"]

[dev-dependencies]
futures = { version = "0.3", features = ["async-await", "thread-pool"] }
rand = "0.7"
async-timer = "0.6"
tinymt = "1.0.4"
rayon = "1.3.0"
bo-tie-linux = {path = "../base-crates/bo-tie-linux"}
tokio = { version = "1.0", features = ["sync"]}

