[package]
name = "bo-tie"
version = "0.1.0"
authors = ["gpace1 <33923139+gpace1@users.noreply.github.com>"]
keywords = ["Bluetooth", "BLE", "Low Energy"]
categories = ["asynchronous"]
license = "MIT"
edition = "2021"

[dependencies]
bo-tie-macros = { path = "../bo-tie-macros" }
# bo-tie-serde = { path = "../bo-tie-serde" }
serde = { version = "1", features = ['derive'] }
log = "0.4"
rand_core = { version = "0.6", features = ['getrandom'] }
elliptic-curve = { version = "0.10", features = ["ecdh"] }
p256 = { version = "0.9", features = ["ecdh"] }
aes = { version = "0.7" }
uuid = { version = "1.0", optional = true }

[features]
uuid-crate = ["uuid"]
unstable = []

[dev-dependencies]
futures = { version = "0.3", features = ["async-await", "thread-pool"] }
rand = "0.8"
async-timer = "0.7"
tinymt = "1.0.4"
rayon = "1.3.0"
tokio = { version = "1.0", features = ["full", "test-util"]}
tokio-test = "0.4"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

