[package]
name = "bo-tie"
version = "0.1.0"
authors = ["gpace1 <33923139+gpace1@users.noreply.github.com>"]
keywords = ["Bluetooth", "BLE", "Low Energy"]
categories = ["asynchronous"]
license = "MIT"
edition = "2021"

[dependencies]
bo-tie-util = {path = "../bo-tie-util", default-features = false }
bo-tie-hci-host = { path = "../hci/bo-tie-hci-host", default-features = false, optional = true }
bo-tie-hci-interface = { path = "../hci/bo-tie-hci-interface", default-features = false, optional = true }
bo-tie-hci-util = { path = "../hci/bo-tie-hci-util", default-features = false, optional = true }
bo-tie-host-util = { path = "../host/bo-tie-host-util", optional = true }
bo-tie-l2cap = { path = "../host/bo-tie-l2cap", default-features = false, optional = true }
bo-tie-gap = { path = "../host/bo-tie-gap", default-features = false, optional = true }
bo-tie-att = { path = "../host/bo-tie-att", default-features = false, optional = true }
bo-tie-gatt = { path = "../host/bo-tie-gatt", default-features = false, optional = true }
bo-tie-sm = { path = "../host/bo-tie-sm", default-features = false, optional = true }

[features]
default = ["std", "hci", "l2cap", "gap", "att", "gatt", "sm", "cryptography", "sys-rand" ]
std = ["bo-tie-util/std", "bo-tie-hci-host/std", "bo-tie-hci-interface/std", "bo-tie-hci-util/std", "bo-tie-sm/std", "bo-tie-l2cap/std"]
hci = ["bo-tie-hci-util", "bo-tie-hci-host", "bo-tie-hci-interface"]
l2cap = ["bo-tie-host-util", "bo-tie-l2cap", "bo-tie-hci-host/l2cap"]
gap = ["bo-tie-host-util", "bo-tie-gap", "bo-tie-hci-host/gap", "bo-tie-hci-util/gap"]
att = ["bo-tie-host-util", "l2cap", "bo-tie-att"]
gatt = ["bo-tie-host-util", "att", "bo-tie-gatt"]
sm = ["bo-tie-host-util", "l2cap", "bo-tie-sm", "cryptography"]
tokio = ["bo-tie-hci-util/tokio", "bo-tie-att/tokio"]
futures-rs = ["bo-tie-hci-util/futures-rs", "bo-tie-att/futures-rs"]
async-std = ["bo-tie-hci-util/async-std", "bo-tie-att/async-std"]
uuid-crate = ["bo-tie-att/uuid-crate", "bo-tie-gatt/uuid-crate", "bo-tie-host-util/uuid-crate"]
cryptography = ["bo-tie-util/cryptography"]
sys-rand = ["bo-tie-util/sys-rand"]
serde = ["bo-tie-util/serde", "bo-tie-sm/serde"]

# Unstable features
#
# These are subject to change and code enabled by these features may not be "additive" (see: https://doc.rust-lang.org/cargo/reference/features.html#feature-unification)
unstable = [
    "bo-tie-hci-util/unstable", "bo-tie-hci-host/unstable", "bo-tie-hci-interface/unstable", "bo-tie-gatt/unstable"
]


[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

