[package]
name = "bo-tie-linux"
version = "0.1.0"
authors = ["gpace1 <33923139+gpace1@users.noreply.github.com>"]
edition = "2021"

[dependencies]
bo-tie-hci-host = { path = "../../hci/bo-tie-hci-host" }
bo-tie-hci-interface = { path = "../../hci/bo-tie-hci-interface", features = ["std"] }
bo-tie-hci-util = { path = "../../hci/bo-tie-hci-util", features = ["std", "tokio"] }
bo-tie-core = { path = "../../bo-tie-core" }
nix = "0.25.0"
log = "0.4.6"
tokio = { version = "1", features = ["sync", "macros"] }

[dev-dependencies]
tokio = { version = ">=0", features = ["sync", "rt"] }
bo-tie = { path = "../../bo-tie" }