[package]
name = "bo-tie-hci-util"
version = "0.1.0"
edition = "2021"

[dependencies]
bo-tie-macros = { path = "../../bo-tie-macros" }
bo-tie-util = { path = "../../bo-tie-util" }
bo-tie-gap = { path = "../../bo-tie-host/bo-tie-gap", optional = true }

[features]
default = ["gap"]
std = []
gap = [ "bo-tie-gap" ]