[package]
name = "bo-tie-gatt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bo-tie-att = { path = "../bo-tie-att" }
bo-tie-host-util = { path = "../bo-tie-host-util" }
bo-tie-l2cap = { path = "../bo-tie-l2cap" }
bo-tie-util = { path = "../../bo-tie-util" }
log = "0.4"

[features]
uuid-crate = ["bo-tie-att/uuid-crate"]