[package]
name = "bo-tie-sm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bo-tie-l2cap = { path = "../bo-tie-l2cap" }
bo-tie-util = { path = "../../bo-tie-util", features = ["sys-rand", "cryptography"]}
elliptic-curve = "0.12"
log = "0.4"
serde = { version = "1", features = ["derive"] }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]