[package]
name = "bo-tie-sm"
version = "0.1.0"
edition = "2021"

[dependencies]
bo-tie-gap = { path = "../bo-tie-gap" }
bo-tie-l2cap = { path = "../bo-tie-l2cap" }
bo-tie-util = { path = "../../bo-tie-util", features = ["sys-rand", "cryptography"] }
elliptic-curve = "0.12"
log = "0.4"
p256 = "0.11"
serde = { version = "1", features = ["derive"], optional = true }

[features]
serde = ["dep:serde", "bo-tie-util/serde"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]