[package]
name = "advertiser"
version = "0.1.0"
edition = "2021"

[dependencies]
bo-tie = { path = "../../bo-tie" }
bo-tie-linux = { path = "../../base-crates/bo-tie-linux" }
futures = "0.3"
getopts = "0.2"
simplelog = "0.11"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros"] }

[target.'cfg(unix)'.dependencies]
signal-hook = "0.3"
signal-hook-tokio = { version = "0.3", features = ["futures-v0_3"] }
futures = "0.3"