[package]
name = "heart-rate-profile"
version = "0.1.0"
edition = "2021"

[dependencies]
bo-tie = { path = "../../bo-tie" }
bo-tie-linux = { path = "../../base-crates/bo-tie-linux"}
futures = { version = "0.3", features = ["thread-pool"] }
simplelog = "0.11"
simple-signal = "1"
structopt = "0.3"
log = "0.4"
rand = "0.8"
