[package]
name = "le-peripheral"
version = "0.1.0"
edition = "2021"

[dependencies]
bo-tie = { path = "../../bo-tie" }
futures = "0.3"
simplelog = "0.12.0"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros"] }

[target.'cfg(target_os = "linux")'.dependencies]
bo-tie-linux = { path = "../../base-crates/bo-tie-linux"}
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "signal"] }