[package]
name = "bo-tie-hci-host"
version = "0.1.0"
edition = "2021"

[dependencies]
bo-tie-gap = { path = "../../host/bo-tie-gap", optional = true }
bo-tie-hci-interface = { path = "../bo-tie-hci-interface" }
bo-tie-hci-util = { path = "../bo-tie-hci-util" }
bo-tie-l2cap = { path = "../../host/bo-tie-l2cap", optional = true }
bo-tie-util = { path = "../../bo-tie-util" }
log = "0.4"

[features]
default = ["gap", "l2cap"]
gap = ["bo-tie-gap"]
l2cap = ["bo-tie-l2cap"]
std = ["bo-tie-hci-interface/std", "bo-tie-hci-util/std", "bo-tie-util/std"]

# unstable bo-tie features (note: unstable features are not additive see: https://doc.rust-lang.org/cargo/reference/features.html#feature-unification)
unstable = ["bo-tie-hci-util/unstable", "bo-tie-hci-interface/unstable"]
unstable-type-alias-impl-trait = []

# These features map to the LE features. Every feature listed within
# le-default-features
le-connection-parameters = []
le-connection = []
le-encryption = []
le-privacy = []
le-receiver = []
le-transmitter = []