[package]
name = "bo-tie-hci-interface"
version = "0.1.0"
edition = "2021"

[dependencies]
bo-tie-hci-util = { path = "../bo-tie-hci-util" }
bo-tie-core = { path = "../../bo-tie-core" }
log = "0.4"

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros", "sync"]}
tokio-test = "0.4"
bo-tie-hci-util = { path = "../bo-tie-hci-util", features = ["tokio"]}

[features]
std = ["bo-tie-hci-util/std", "bo-tie-core/std"]
unstable = ["bo-tie-hci-util/unstable"]