[package]
name = "bo-tie-hci-util"
version = "0.1.0"
edition = "2021"

[dependencies]
bo-tie-macros = { path = "../../bo-tie-macros" }
bo-tie-util = { path = "../../bo-tie-util" }
bo-tie-gap = { path = "../../host/bo-tie-gap", optional = true }
tokio = { version = "1.0", features = ["sync"], optional = true }
futures = { version = "0.3", optional = true }
async-std = { version = "1", optional = true }

[dev-dependencies]
bo-tie-hci-host = { path = "../bo-tie-hci-host" }
bo-tie-gap = { path = "../../host/bo-tie-gap" }

[features]
default = ["gap"]
std = []
tokio = ["std", "dep:tokio"]
futures-rs = ["std", "dep:futures"]
async-std = ["std", "dep:async-std"]
gap = [ "bo-tie-gap" ]
unstable = []