[package]
name = "bo-tie-hci-util"
version = "0.1.0"
edition = "2021"

[dependencies]
bo-tie-macros = { path = "../../bo-tie-macros" }
bo-tie-core = { path = "../../bo-tie-core" }
bo-tie-gap = { path = "../../host/bo-tie-gap", optional = true }
tokio = { version = "1", features = ["sync"], optional = true }
futures = { version = "0.3", optional = true }
async-std = { version = "1", optional = true }
log = "0.4"

[dev-dependencies]
bo-tie-hci-host = { path = "../bo-tie-hci-host" }
bo-tie-gap = { path = "../../host/bo-tie-gap" }
tokio = { version = ">=0", features = ["sync", "rt", "macros"]}
futures = "0.3"

[features]
default = ["gap"]
std = []
tokio = ["std", "dep:tokio"]
futures-rs = ["std", "dep:futures"]
async-std = ["std", "dep:async-std"]
gap = [ "bo-tie-gap" ]
unstable = []