[package]
name = "bo-tie-att"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4"
bo-tie-l2cap = { path = "../bo-tie-l2cap" }
bo-tie-host-util = { path = "../bo-tie-host-util" }
bo-tie-util = { path = "../../bo-tie-util" }

[dev-dependencies]
tinymt = "1"

[features]
uuid-crate = ["bo-tie-host-util/uuid-crate"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]