[package]
name = "bo-tie-gap"
version = "0.1.0"
edition = "2021"

[dependencies]
bo-tie-att = { path = "../bo-tie-att" }
bo-tie-core = { path = "../../bo-tie-core" }
bo-tie-host-util = { path = "../bo-tie-host-util" }

[dev-dependencies]
bo-tie-sm = { path = "../bo-tie-sm" }

[features]
deafult = ["std"]
alloc = []
std = ["alloc"]