[package]
name = "bo-tie-gatt"
version = "0.1.0"
edition = "2021"

[dependencies]
bo-tie-att = { path = "../bo-tie-att" }
bo-tie-host-util = { path = "../bo-tie-host-util" }
bo-tie-l2cap = { path = "../bo-tie-l2cap" }
bo-tie-core = { path = "../../bo-tie-core" }
bo-tie-macros = { path = "../../bo-tie-macros" }
aquamarine = "0.1"
log = "0.4"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt", "sync"] }

[features]
std = ["bo-tie-att/std", "bo-tie-l2cap/std"]
uuid-crate = ["bo-tie-att/uuid-crate"]
tokio = ["bo-tie-att/tokio"]
futures-rs = ["bo-tie-att/futures-rs"]
async-std = ["bo-tie-att/async-std"]
cryptography = ["bo-tie-core/cryptography"]
unstable = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
