[package]
name = "bo-tie-l2cap"
version = "0.1.0"
edition = "2021"

[dependencies]
bo-tie-core = { path = "../../bo-tie-core" }

[dev-dependencies]
quickcheck = "1"
quickcheck_macros = "1"
tokio = { version = "1", features = ["full"] }

[features]
default = ["std"]
std = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
