[package]
name = "bo-tie-sm"
version = "0.1.0"
edition = "2021"

[dependencies]
bo-tie-gap = { path = "../bo-tie-gap", features = ["alloc"] }
bo-tie-l2cap = { path = "../bo-tie-l2cap" }
bo-tie-macros = { path = "../../bo-tie-macros" }
bo-tie-core = { path = "../../bo-tie-core", features = ["sys-rand", "cryptography"] }
elliptic-curve = "0.13"
log = "0.4"
p256 = "0.13"
rand_core = { version = "0.6", default-features = false }
serde = { version = "1", features = ["derive"], optional = true }

[dev-dependencies]
bo-tie-l2cap = { path = "../bo-tie-l2cap", features = ["std"] }
tokio = { version = "1", features = ["sync", "rt", "macros"] }

[features]
std = ["bo-tie-gap/std"]
serde = ["dep:serde", "bo-tie-core/serde"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]