[package]
name = "bo-tie-host-tests"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
async-trait = "0.1"
futures = "0.3"
bo-tie-core = { path = "../../bo-tie-core" }
bo-tie-l2cap = { path = "../bo-tie-l2cap" }
tokio = { version = "1", features = ["sync"]}

[dev-dependencies]
bo-tie-host-util = { path = "../bo-tie-host-util" }
bo-tie-core = { path = "../../bo-tie-core" }
bo-tie-l2cap = { path = "../bo-tie-l2cap" }
bo-tie-gap = { path = "../bo-tie-gap" }
bo-tie-att = { path = "../bo-tie-att", features = ["tokio"] }
bo-tie-gatt = { path = "../bo-tie-gatt" }
bo-tie-sm = { path = "../bo-tie-sm" }
futures = "0.3"
paste = "1"
rand = "0.8"
rand_chacha = "0.3"

[dev-dependencies.tokio]
version = "1"
features = ["rt", "macros", "sync", "time"]

[[test]]
name = "l2cap_le_u_link"
path = "tests/l2cap/le_u_link.rs"

[[test]]
name = "l2cap_signals_le_credit_connection"
path = "tests/l2cap/signals/le_credit_connection.rs"

[[test]]
name = "l2cap_basic_frame"
path = "tests/l2cap/pdu/basic_frame.rs"

[[test]]
name = "l2cap_credit_frame"
path = "tests/l2cap/pdu/credit_frame.rs"

[[test]]
name = "l2cap_multiple_channels"
path = "tests/l2cap/collections.rs"

[[test]]
name = "att_connection"
path = "tests/att/connection_test.rs"

[[test]]
name = "att_mtu_exchange"
path = "tests/att/mtu_exchange.rs"

[[test]]
name = "att_find_information"
path = "tests/att/find_information.rs"

[[test]]
name = "att_find_by_type_value"
path = "tests/att/find_by_type_value.rs"

[[test]]
name = "att_read_by_type"
path = "tests/att/read_by_type.rs"

[[test]]
name = "att_read"
path = "tests/att/read.rs"

[[test]]
name = "att_read_blob"
path = "tests/att/read_blob.rs"

[[test]]
name = "att_read_multiple"
path = "tests/att/read_multiple.rs"

[[test]]
name = "att_write"
path = "tests/att/write.rs"

[[test]]
name = "att_queued_write"
path = "tests/att/queued_write.rs"

[[test]]
name = "gatt_read_by_group_type"
path = "tests/gatt/read_by_group_type.rs"