[package]
name = "bo-tie-host-tests"
version = "0.1.0"
edition = "2021"

[dependencies]
bo-tie-core = { path = "../../bo-tie-core" }
bo-tie-l2cap = { path = "../bo-tie-l2cap" }

[dev-dependencies]
bo-tie-host-util = { path = "../bo-tie-host-util" }
bo-tie-core = { path = "../../bo-tie-core" }
bo-tie-l2cap = { path = "../bo-tie-l2cap" }
bo-tie-gap = { path = "../bo-tie-gap" }
bo-tie-att = { path = "../bo-tie-att", features = ["tokio"] }
bo-tie-gatt = { path = "../bo-tie-gatt" }
bo-tie-sm = { path = "../bo-tie-sm" }
futures = "0.3"
paste = "1"
rand = "0.8"
tokio-test = { version = "0.4", default-features = false }

[dev-dependencies.tokio]
version = "1"
features = ["rt", "macros", "sync", "time"]

# tests are organized below by their directory listing within folder `tests`

[[test]]
name = "att_connection"
path = "tests/att/connection_test.rs"

[[test]]
name = "att_mtu_exchange"
path = "tests/att/mtu_exchange.rs"

[[test]]
name = "att_find_information"
path = "tests/att/find_information.rs"

[[test]]
name = "att_find_by_type_value"
path = "tests/att/find_by_type_value.rs"

[[test]]
name = "att_read_by_type"
path = "tests/att/read_by_type.rs"

[[test]]
name = "att_read"
path = "tests/att/read.rs"

[[test]]
name = "att_read_blob"
path = "tests/att/read_blob.rs"

[[test]]
name = "att_read_multiple"
path = "tests/att/read_multiple.rs"

[[test]]
name = "att_write"
path = "tests/att/write.rs"

[[test]]
name = "att_queued_write"
path = "tests/att/queued_write.rs"

[[test]]
name = "att_notification"
path = "tests/att/notification.rs"

[[test]]
name = "gatt_read_by_group_type"
path = "tests/gatt/read_by_group_type.rs"

[[test]]
name = "l2cap_signals_le_credit_connection"
path = "tests/l2cap/signals/le_credit_connection.rs"

[[test]]
name = "l2cap_signals_disconnec"
path = "tests/l2cap/signals/disconnect.rs"

[[test]]
name = "l2cap_le_u_link"
path = "tests/l2cap/le_u_link.rs"